sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: value getNombreValeurs is not a member of Int
    for(k<- 0 getNombreValeurs()-(i+1)){
              ^AlgBubbleSort1:4: error: value - is not a member of Unit
    for(k<- 0 getNombreValeurs()-(i+1)){
                                ^